--- a/src/backend/HSMD.Application/HSMD.Application.csproj
+++ b/src/backend/HSMD.Application/HSMD.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
+    <ProjectReference Include="..\HSMD.Domain\HSMD.Domain.csproj" />
   </ItemGroup>
 
 </Project>
